recent Jacek changes

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -42,7 +42,7 @@
             <div class="player-box">
               <i class="icofont-spinner-alt-3"></i>
               <p>Szukaj klubu. Szukaj testów. Szukaj szkółki. Brak ofert o Twoich wymaganiach? Pomożemy Ci w transferze w Polsce i za granicą. </p>
-               <a href="/transfer" class="btn-owl" alt="clubs-base">Szukaj klubu</a>
+               <a href="/transfer/" class="btn-owl" alt="clubs-base">Szukaj klubu</a>
             </div>
           </div>
 
@@ -50,7 +50,7 @@
             <div class="player-box">
               <i class="icofont-star"></i>
               <p>Obserwuj piłkarzy, trenerów oraz kluby. Otrzymuj powiadomienia o ich wynikach. Zapraszaj znajomych i rywalizuj z nimi w Fantasy dla niższych lig.</p>
-              <a href="/signup/" class="btn-owl" alt="clubs-base">Graj w fantasy</a>
+              <a href="/fantasy/" class="btn-owl" alt="clubs-base">Graj w fantasy</a>
             </div>
           </div>
 
@@ -58,7 +58,7 @@
             <div class="player-box">
               <i class="icofont-listine-dots"></i>
               <p>Korzystaj z produktów dodatkowych. Dietetyk, Trener motoryczny, Trener bramkarzy, Trener techniki, Trener mentalny. Raport skautingowy z Twojej gry.</p>
-                <a href="/signup/" class="btn-owl" alt="clubs-base">Skorzystaj z produktów</a>
+                <a href="/products/" class="btn-owl" alt="clubs-base">Skorzystaj z produktów</a>
             </div>
           
         </div>
@@ -276,8 +276,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="icofont-team"></i>
-              <span data-toggle="counter-up">1,078</span>
-              <p>Liczba piłkarzy z pełnym CV</p>
+              <span data-toggle="counter-up">+2,200</span>
+              <p>Piłkarzy z pełnym piłkarskim CV</p>
             </div>
           </div>
 
@@ -285,24 +285,24 @@
             <div class="count-box">
               <i class="icofont-users"></i>
               
-              <span data-toggle="counter-up">102</span>
-              <p>Liczba zarejestrowanych klubów i trenerów</p>
+              <span data-toggle="counter-up">+180</span>
+              <p>Zarejestrowanych klubów i trenerów</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-field"></i>
-              <span data-toggle="counter-up">84</span>
-              <p>Liczba wysłanych piłkarzy na testy</p>
+              <span data-toggle="counter-up">+500</span>
+              <p>Wysłanych zapytań o testy</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="icofont-search-user"></i>
-              <span data-toggle="counter-up">11</span>
-              <p>Liczba przeprowadzonych naborów do szkółek</p>
+              <span data-toggle="counter-up">+15</span>
+              <p>Zrealizowanych współprac skautingowych</p>
             </div>
           </div>
 
