--- a/profiles/templates/profiles/show_coach_profile.html
+++ b/profiles/templates/profiles/show_coach_profile.html
@@ -8,21 +8,18 @@
     {{ block.super }}
 {% endblock %}
 
-
-
-
 {% block content %}  <!-- @todo frontend to be renovated to adjust template-->
+
+{% include 'profiles/player_subpage_header_black.html' %}
+
 <section id="profile" class="profile" style="padding-top:10px;">
   <div class="container profile-container" data-aos="fade-up">
-
       <div class="row">
-        <div class="col-sm-6">{% include 'profiles/cards/coach/account_card.html' %}</div>
-        <div class="col-sm-6">{% include 'profiles/cards/coach/clubs_card.html' %}</div>
-      </div>  <!-- end row -->
-    </div> <!-- end container -->
+        <div class="col-sm-6">{% include 'profiles/cards/coach/card_primary.html' %}</div>
+        <div class="col-sm-6">{% include 'profiles/cards/coach/card_season.html' %}</div>
+        <div class="col-sm-6">{% include 'profiles/cards/coach/card_latest_games.html' %}</div>
+      </div>
+    </div>
   </div>
 </section>
-
-
-{% endblock content%}
-
+{% endblock content %}
