--- a/app/templates/platform/debug_info.html
+++ b/app/templates/platform/debug_info.html
@@ -45,5 +45,12 @@
             seo_data: <code>{{ seo }}</code><br>
         </small>
     </div>
+    
+    <strong>Page debug info:</strong>
+    <div class="text-muted" style="border:1px solid #ccc">
+        <small>
+            data: <code>{{ debug_data }}</code><br>
+        </small>
+    </div>
 </div>
 {% endif %}
