--- a/plays/templates/plays/header_black.html
+++ b/plays/templates/plays/header_black.html
@@ -14,17 +14,21 @@
                         </div>
 
                         <div class="col-8">
-                            <h1 class="d-none d-md-block acc-name" style="#1b1b1b;">{{ league.name.upper }}</h1>                          
-                            <div class=" d-inline"> {{ current_season }}</div>
+                            <h1 class="d-none d-md-block acc-name" style="#1b1b1b;">{{ league.name.upper }}</h1>
+                                              
+                            <div class=" d-inline">
+
+                            </div>
                         </div>
 
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="row">
-                         <h1 class=" d-md-none pl-3 acc-name">{{ league.name.upper }}</h1>
-                         <div class="d-md-none d-inline"> {{ current_season }}</div>
-                            
+                         {% comment %} <h1 class=" d-md-none pl-3 acc-name">{{ league.name.upper }}</h1>
+                            <form >
+                                    {% include 'plays/filters/season.html' %}
+                            </form> {% endcomment %}
 
                     </div>
                 </div>
