--- a/plays/templates/plays/plays.html
+++ b/plays/templates/plays/plays.html
@@ -1,10 +1,13 @@
 {% extends 'platform/base.html' %}
 {% load i18n %}
 {% load static %}
-
+{% load playmaker %}
 {% block extra_css %}
     {{ block.super }}
     <link href="{% static 'assets/css/profiles.css' %}" rel="stylesheet">
+
+
+
 {% endblock extra_css%}
 
 
@@ -15,31 +18,65 @@
 
 {% block content %}
 
-{% include 'plays/header_black.html' %}
 
-{% if  league.is_parent %}
-
-        {% for child in league.parent.set %}
-            <a href="">{{ child.name }} </a>
-        {% endfor %}
-
-{% else %}
-
-<section id="plays" class="plays">
+<div class="row">
+<section id="leagues-side-bar" style="background-color:#2b2b2b;" class="col-2">
   <div class="container" data-aos="fade-up">
-    <div class="row">
-        {% if page_obj.paginator.count == 0 %}
+                                <form >
+                                  {% include 'plays/filters/season.html' %}
+                                </form>
+    <select id="leagues-search" class="selectpicker" data-live-search="true" >
+        {% for league in leagues %}
+            {% if league|has_season_data:current_season %}
+
+                <option data-tokens="{{league.name}} {{league.zpn}}"  value="{% url 'plays:summary' slug=league.slug  %}">{{ league.name }}</option>
+            {% endif %}
+        {% endfor %}
+    </select>
+    <div class="">
+        {% for league in leagues %}
+            {% if league.is_parent %}
+                {{ league.name }}
+                {% for child in league.league_set.all %}
+                    {% if child|has_season_data:current_season %}
+                        <div><a href="{% url 'plays:summary' slug=child.slug  %}">{{ child.name }}</a>{{ child.serach_index }}</div><br>
+                    {% endif %}
+                {% endfor %}
+            {% else %}
+                    {% if league|has_season_data:current_season %}
+                    <div><a href="{% url 'plays:summary' slug=league.slug  %}">{{ league.name }}</a> {{ league.serach_index }}</div><br>
+                    {% endif %}
+            {% endif %}
+        {% endfor %}
+    </div>
+</div>
+</section>
+<section id="plays" class="plays col-10" style="padding:0px 0px;">
+{% include 'plays/header_black.html' %}
+  <div class="container" data-aos="fade-up">
+    <div class="">
+        {% comment %} {% if page_obj.paginator.count == 0 %} {% endcomment %}
+        {% if objects|length == 0 %}
             <div class="col-md-12 text-center">
-                {% include 'profiles/partials/_empty_data.html' %}
+                {% include 'profiles/partials/_empty_data.html' with empty_text="Brak danych" %}
             </div>
+
         {% else %}
             <div class="col">
             {% if tab == 'table' %}
                 {% include 'plays/_table_table.html' with objects=objects %}
+
+            {% elif tab == 'matches' %}
+                {% include 'plays/_table.html' with objects=objects %}
+            
+            {% elif tab == 'scores' %}
+                {% include 'plays/_table.html' with objects=objects %}
+
             {% elif tab == 'playmaker' %}
                 {% include 'plays/_table_playmaker.html' with objects=objects %}
+
             {% else %}
-                {% include 'plays/_table.html' with objects=objects %}
+                {% include 'plays/_summary.html' with objects=objects %}
             {% endif %}
             </div>   
             <div class='col-md-12'>
@@ -49,12 +86,28 @@
     </div>
 </div>
 </section>
-
-
-{% endif %}
+</div>
 {% endblock %}
 
 
 {% block extra_js %}
+    {{ block.super }}
+    <script src="{% static 'assets/js/filters.js' %}"></script>
+    <script>
+        $('#leagues-search').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
+            console.log(this.value, clickedIndex, isSelected, previousValue)
+            window.location.href = this.value;
+        });
+    </script>
+    <script>
+        $('#search-season').on('changed.bs.select', function (e, clickedIndex, isSelected, previousValue) {
+            console.log(this.value, isSelected)
+            var search_params = new URLSearchParams(window.location.search);
+            search_params.set('season', this.value);
 
+            window.location.search = search_params.toString();
+            console.log(search_params.toString())
+            //window.location.reload()
+        });
+    </script>
 {% endblock %}
