missing summary html

--- a/plays/templates/plays/plays.html
+++ b/plays/templates/plays/plays.html
@@ -76,7 +76,7 @@
                 {% include 'plays/_tab_playmaker.html' with objects=objects %}
 
             {% else %}
-                {% include 'plays/_summary.html' with objects=objects %}
+                {% include 'plays/_tab_summary.html' with objects=objects %}
             {% endif %}
             </div>   
             <div class='col-md-12'>
