--- a/plays/templates/plays/_tab_table.html
+++ b/plays/templates/plays/_tab_table.html
@@ -1,9 +1,7 @@
 {% load i18n %}
 {% load thumbnail %}
 
-  <table class="table" style="border:1px;">
-
-
+<table class="table" style="border:1px;">
       <thead>
         <tr>
             <th scope="col" class="d-md-none">{% trans '#' %}</th>
@@ -26,27 +24,22 @@
             <td class="d-none d-md-table-cell pull-left">
                 {{ obj.position }}
                 {{ obj.date }}
-                <img width="20" class=" avatar rounded-circle img-responsive" title="profile picture" src="{{ obj.icon }}">
+                <img width="20" class=" avatar rounded-circle img-responsive" title="profile picture" src="{{ obj.pic }}">
                 {% if obj.team_url %}
                     <a href="obj.team_url"> {{ obj.team }} </a>
                 {% else %}{{ obj.team }} {% endif %}
             </td>
-            <td class="d-none d-md-table-cell">{{ obj.games }}   </td>
-         <td class="d-none d-md-table-cell">{{ obj.wins }}   </td>
-         <td class="d-none d-md-table-cell">{{ obj.losts }}   </td>
-         <td class="d-none d-md-table-cell">{{ obj.draws }}   </td>
-         <td class="d-none d-md-table-cell">{{ obj.goals }}   </td>
-         <td class="d-none d-md-table-cell">{{ obj.points }}   </td>
-           
-
+            <td class="d-none d-md-table-cell">{{ obj.games }}</td>
+         <td class="d-none d-md-table-cell">{{ obj.wins }}</td>
+         <td class="d-none d-md-table-cell">{{ obj.losts }}</td>
+         <td class="d-none d-md-table-cell">{{ obj.draws }}</td>
+         <td class="d-none d-md-table-cell">{{ obj.goals }}</td>
+         <td class="d-none d-md-table-cell">{{ obj.points }}</td>
             <td class="d-none d-md-table-cell">
              {% for t in obj.trend %}
-
                 <span class="match-result-tag p-1 text-white rounded bg-{% if t == 'W' %}success{% elif t == 'P' %}danger{% else %}secondary{% endif %}">{{ t }}</span>
-
             {% endfor %}
             </td>
-
         </tr>
 
     {% endfor %}
