--- a/plays/templates/plays/_tab_table.html
+++ b/plays/templates/plays/_tab_table.html
@@ -24,7 +24,7 @@
             <td class="d-none d-md-table-cell pull-left">
                 {{ obj.position }}
                 {{ obj.date }}
-                <img width="20" class=" avatar rounded-circle img-responsive" title="profile picture" src="{{ obj.pic }}">
+                <img width="20" class=" avatar rounded img-responsive" title="profile picture" src="{{ obj.pic }}">
                 {% if obj.team_url %}
                     <a href="obj.team_url"> {{ obj.team }} </a>
                 {% else %}{{ obj.team }} {% endif %}
