--- a/plays/templates/plays/header_black.html
+++ b/plays/templates/plays/header_black.html
@@ -7,10 +7,10 @@
                 <div class="col-md-8">
                     <div class="row no-gutters">
                         <div class="d-none d-md-block col-md-2">
-                            <img class=" avatar rounded-circle img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
+                            <img class=" avatar rounded img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
                         </div>
                         <div class="d-md-none col-4 pull-right">
-                            <img class="d-md-none avatar rounded-circle img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
+                            <img class="d-md-none avatar rounded img-responsive" title="profile picture" src="{% thumbnail league.picture|default:'default_profile.png' 'profile_avatar_show_mobile' %}">
                         </div>
                         <div class="col-8">
                             <h1 class="d-none d-md-block acc-name" style="#1b1b1b;">{{ league.name.upper }}</h1>
