adding new changes

--- a/plays/templates/plays/partials/game_with_pic.html
+++ b/plays/templates/plays/partials/game_with_pic.html
@@ -1,6 +1,2 @@
-{% if url %}
-    <a href="{{ url }}"> {{ name}}</a>
-{% else %} 
-    {{ name }}
-{% endif %}
+{% if url %} <a href="{{ url }}"> {{ name}}</a>{% else %} {{ name }} {% endif %}
 <img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
