--- a/profiles/templates/profiles/cards/coach/card_latest_games.html
+++ b/profiles/templates/profiles/cards/coach/card_latest_games.html
@@ -1,5 +1,7 @@
 {% load i18n %}
 {% load playmaker %}
+
+>>>> {{ last_games }} <<<<
 <div class="card last-game-card">
     <div class="card-body">
         <h2 class="card-title">{% trans "Ostatnie mecze"%}</h2>
