--- a/plays/templates/plays/partials/game_with_pic.html
+++ b/plays/templates/plays/partials/game_with_pic.html
@@ -1,2 +1,9 @@
-{% if url %} <a href="{{ url }}"> {{ name}}</a>{% else %} {{ name }} {% endif %}
+
+{% if image_left %}
 <img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
+{% endif %}
+{% if url %} <a href="{{ url }}"> {{ name}}</a>{% else %} {{ name }} {% endif %}
+
+{% if not image_left %}
+<img width="20" class="avatar rounded img-responsive" title="profile picture" src="{{ pic }}">
+{% endif %}
